finshed first part

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <p>This website has some subtext goes here under the main title. I'ts a smaller font and the color is a
                     lower
                     contrast</p>
-                <button>SIGN UP</button>
+                <button>Sign up</button>
             </div>
             <div class="placeholder-background-color">
                 <p>This Is a place holder for a image</p>
