--- a/index.html
+++ b/index.html
@@ -24,8 +24,9 @@
         </nav>
         <div class="hero-section">
             <div class="website-awesome">
-                <h1>This website is awesome</h1>
-                <p>This website has some subtext goes here under the main title. I'ts a smaller font and the color is a
+                <h2>This website is awesome</h2>
+                <p>This website has some subtext goes here under the main title. I'ts a smaller font and the color
+                    is a
                     lower
                     contrast</p>
                 <button>Sign up</button>
@@ -33,6 +34,32 @@
             <div class="placeholder-background-color">
                 <p>This Is a place holder for a image</p>
             </div>
+        </div>
+    </div>
+    <div class="second-part-background">
+        <div class="random-info">
+            <h2>Some random information</h2>
+        </div>
+        <div class="flex-cards">
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+        </div>
+        <div class="flex-subtext">
+            <p>This is some subtext under a illustration or image</p>
+            <p>This is some subtext under a illustration or image</p>
+            <p>This is some subtext under a illustration or image</p>
+            <p>This is some subtext under a illustration or image</p>
+        </div>
+    </div>
+    <div class="third-part-background">
+        <div class="quote-center">
+            <h2 class="quote-text">This is an inspiring quote or a testimonial from a customer. Maybe its just filling
+                up
+                space,
+                or maybe people
+                will actually read it. Who knows? All I know is that it looks nice.</h2>
         </div>
     </div>
 </body>
