finished call to action section

--- a/index.html
+++ b/index.html
@@ -61,7 +61,23 @@
                 or maybe people
                 will actually read it. Who knows? All I know is that it looks nice.</h2>
         </div>
+        <p>-Thor, god of Thunder</P>
     </div>
+    <div class="last-section">
+        <div class="blue-bar-call-to-action">
+            <div class="call-to-action-position">
+                <h3>Call to action! It's time!</h3>
+                <p>Sign up for our product for clicking that button right over there!</p>
+            </div>
+            <button>Sign up</button>
+
+        </div>
+    </div>
+    <footer>
+        <div class="footer">
+            <p>The Odin project</p>
+        </div>
+    </footer>
 </body>
 
 </html>
