finshed the footer

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
     </div>
     <footer>
         <div class="footer">
-            <p>The Odin project</p>
+            <p>Copyright &#169; The Odin project</p>
         </div>
     </footer>
 </body>
